@startuml
'https://plantuml.com/class-diagram

!include common-model-cd.puml
package org.iac2.productionsystem {
    abstract ArchitecturalReconstructionPlugin {
    }
    abstract class ModelGenerationPlugin {
    +SystemModel constructSystemModel(ProductionSystem)
    }
    abstract class ModelEnhancementPlugin {
    +void enhanceSystemModel(SystemModel, ProductionSystem)
    }

    class CustomScriptPlugin
    class HarzenetterApproachPlugin
    class OpenToscaContainerPlugin
    class ProductionSystem
    class ModelEnhancementStrategy
}





ModelGenerationPlugin -up-> ProductionSystem: queries IaC tool
ModelGenerationPlugin -up-> SystemModel: generates
ModelEnhancementPlugin -up-> SystemModel: enhanceSystemModel
ModelEnhancementPlugin -up-> ProductionSystem: crawls
ArchitecturalReconstructionPlugin <|-- ModelGenerationPlugin
ArchitecturalReconstructionPlugin <|-- ModelEnhancementPlugin
ModelEnhancementPlugin <|-- HarzenetterApproachPlugin
ModelEnhancementPlugin <|-- CustomScriptPlugin
ModelGenerationPlugin <|-- OpenToscaContainerPlugin
ModelEnhancementStrategy  o-- "*" ModelEnhancementPlugin


@enduml